Added more URL compatibility and closed scanner instance